fix table header alignment

--- a/frontend/src/components/pages/table/OverlayComponents/TableHeader.scss
+++ b/frontend/src/components/pages/table/OverlayComponents/TableHeader.scss
@@ -2,4 +2,5 @@
     display: flex;
     gap: 0.5rem;
     padding: 0.5rem 1rem;
+    align-items: center;
 }
